# multiple-web-protocols

./: .gitignore  .trivyignore  BADGES.md  README.md  __main__.py  docker-compose.kafka.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml  dependabot.yml  publish-pypi.yml  pylint.yml  release-please.yml
amqp/: __init__.py  __main__.py
config/: envconfig.py
data/: customer.json
data/script/: mongo-init.js  publish_event.py  publish_score_updated.py
db/: address.py  customer.py  customer_db.py
graphql/: __main__.py
graphql_service/: __init__.py  __main__.py  schema.py
grpc_service/: __init__.py  __main__.py  client.py  generate.sh  server.py
grpc_service/customerpb/: customer_pb2.py  customer_pb2_grpc.py
grpc_service/proto/: customer.proto
mcp/: __init__.py
mcp_service/: __main__.py  models.py  service.py
mqtt/: __init__.py  __main__.py
multiple_web_protocols.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rest/: __main__.py  app.py
soap/: __init__.py  __main__.py  customer_service.py
sse/: __init__.py  __main__.py
tests/: test_customer_db.py  test_customer_service.py  test_envconfig.py  test_grpc_server.py  test_rest_app.py  test_service.py  test_webhook.py  test_webhook_receiver.py  test_websocket.py
tests/insomnia/: Insomnia_2026-01-28.yaml
webhook/: __init__.py  __main__.py  dispatcher.py  kafka_consumer.py  main.py  models.py  mongo.py  registry.py  rules.py
webhook_receiver/: __main__.py  service.py
websocket/: __init__.py  __main__.py  kafka_consumer.py  models.py  service.py  ws_manager.py
