[project]
name = "multiple-web-protocols"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "types-protobuf>=6.32.1.20251210",
    "uvicorn>=0.40.0",
]



[project.scripts]
grpc = "grpc_service:main"
websocket = "websocket:main"
mcp = "mcp:main"
rest = "rest.__main__:main"

[tool.uv.workspace]
members = [
    "grpc",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["rest*", "db*", "grpc_service*", "webhook*", "graphql*", "websocket*", "mcp*"]
exclude = ["data*"]
