[project]
name = "multiple-web-protocols"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.13.0",
    "email-validator>=2.3.0",
    "fastapi>=0.104.1",
    "fastmcp>=2.14.4",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "gunicorn>=24.1.1",
    "lxml>=6.0.2",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "spyne>=2.14.0",
    "strawberry-graphql[fastapi]>=0.289.8",
    "tenacity>=9.1.2",
    "twine>=6.2.0",
    "types-protobuf>=6.32.1.20251210",
    "uvicorn[standard]>=0.24.0",
]
[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]


[project.scripts]
grpc = "grpc_service:main"
websocket = "websocket:main"
mcp = "mcp_service:main"
rest = "rest:main"
graphql = "graphql_service:main"
webhook = "webhook:main"
amqp = "amqp:main"
sse = "sse:main"
mqtt = "mqtt:main"
soap = "soap:main"
webhook_receiver = "webhook_receiver:main"




[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["rest*", "db*", "grpc_service*", "webhook*", "graphql*", "websocket*", "mcp*", "amqp*", "sse*", "mqtt*", "soap*", "config*"]
exclude = ["data*"]

[project.urls]
Homepage = "https://github.com/blitznihar/multiple-web-protocols"
Repository = "https://github.com/blitznihar/multiple-web-protocols"
Issues = "https://github.com/blitznihar/multiple-web-protocols/issues"
